[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "requirements-scanner"
version = "1.1.0"
description = "CLI tool to scan repositories for requirements.txt files and analyze package usage with AI-powered environment recommendations"
readme = "README.md"
authors = [
    {name = "Daniel Rosehill", email = "public@danielrosehill.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["requirements", "pip", "packages", "analysis", "scanning", "ai", "environment-management"]

[project.urls]
Homepage = "https://github.com/danielrosehill/What-Reqs-Scanner"
Repository = "https://github.com/danielrosehill/What-Reqs-Scanner"

[project.scripts]
requirements-scanner = "requirements_scanner:main"
reqs-scan = "requirements_scanner:main"

[tool.setuptools]
py-modules = ["requirements_scanner"]
